--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemailer": "^6.6.2",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "node": "14.15.1",
+"npm": "7.6.2"
   }
 }
