--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install",
-    "start": "node server",
+    "build": "cd frontend && npm run build",
+    "install": "cd frontend && npm install",
+    "start": "node app",
     "server": "nodemon app",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start",
   },
   "dependencies": {
     "axios": "^0.21.1",
