--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "simpleserver",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
+ "scripts": {
     "build": "cd frontend && npm run build",
     "install": "cd frontend && npm install",
     "start": "node app",
-    "client": "npm start",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "server": "nodemon app",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "dependencies": {
     "axios": "^0.21.1",
