--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
  "scripts": {
     "build": "cd frontend && npm run build",
     "install": "cd frontend && npm install",
-    "start": "node app",
-    "app": "nodemon app",
+    "start": "node  ./bin/www",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run app\" \"npm run frontend\""
+    "dev": "concurrently \"npm run start\" \"npm run frontend\""
   },
   "dependencies": {
     "axios": "^0.21.1",
