--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "cd frontend && npm run build",
     "install": "cd frontend && npm install",
     "start": "node  ./bin/www",
+       "server": "node ap",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run start\" \"npm run frontend\""
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "dependencies": {
     "axios": "^0.21.1",
