--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "cd frontend && npm run build",
     "install": "cd frontend && npm install",
     "start": "node  ./bin/www",
-    "frontend": "npm start --prefix frontend",
+    "frontend": "npm start --prefix frontend"
   },
   "dependencies": {
     "axios": "^0.21.1",
