--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "simpleserver",
   "version": "0.0.0",
   "private": true,
- "scripts": {
-    "start": "node ./bin/www",
+  "scripts": {
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -23,7 +23,6 @@
     "nodemailer": "^6.6.2",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-
+    "request-promise": "^4.2.6"
   }
 }
