--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
 "build": "cd frontend && npm run build",
     "install": "cd frontend && npm install",
-    "start": "node app",
+    "start": "node ./bin/www",
     "server": "nodemon app",
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\""
