--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "querystring": "^0.2.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-     "node": "14.x"
+     "node": "14.17.0",
+     "npm": "6.x"
   }
 }
