--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
      "node": "14.17.0",
-     "npm": "6.x"
+     "npm": "6.14.13"
   }
 }
